objects/Astonous_SM__Shipping_Static_Data__c.object
<CustomObject>
    <description>Object to Store Static Data that may be required by any Carrier</description>
    <fields>
        <fullName>Astonous_SM__Key_1__c</fullName>
        <label>Key-1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Shipping_Carrier__c</fullName>
        <label>Shipping Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Astonous_SM__Shipping_Carrier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipping Static Data</label>
    <listViews>
        <fullName>Astonous_SM__All</fullName>
        <columns>Astonous_SM__Shipping_Carrier__c</columns>
        <columns>NAME</columns>
        <columns>Astonous_SM__Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Melbourne</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Static Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>